<resources>
    <string name="app_name">Restaurante</string>
    <string name="desarrollador">Desarrollador por: Grupo UTP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu Lateral Admin-->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="ResgistrarAdmin">Registrar Admin</string>
    <string name="ResgistrarPersonal">Registrar Personal</string>
    <string name="ResgistrarPedido">Registrar Pedido</string>
    <string name="Cartilla">Cartilla</string>
    <string name="Salir">Salir</string>

    <!--Menu Lateral Empleado-->
    <string name="InicioEmpleado">Inicio</string>
    <string name="PerfilEmpleado">Mi perfil</string>
    <string name="PedidosEmpleado">Pedidos</string>
    <string name="SalirEmpleado">Salir</string>

    <!--Menu principal-->
    <string name="Eligeunacategoriatxt">Escoge una de las categorías</string>
    <string name="Empleados">EMPLEADOS</string>
    <string name="Pedidos">PEDIDOS</string>
    <string name="Platos">PLATOS</string>
    <string name="Usuarios">USUARIOS</string>

    <!--Actividad Empleados-->
    <string name="Cocina">COCINA</string>
    <string name="Caja">CAJA</string>
    <string name="Mesas">MESEROS</string>

    <!--Login de administradores-->
    <string name="LoginTXT">Login de administradores</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Acceder">Acceder</string>

    <!--Registro de Usuarios-->
    <string name="RegistroAdminTXT">Registro de Usuarios</string>
    <string name="CorreoAdmin">Correo electronico</string>
    <string name="PasswordAdmin">Contraseña</string>
    <string name="RegistrarAdmin">Registrar</string>

    <!--Registro de Personal-->
    <string name="RegistroTXT">Registro de Personal</string>
    <string name="Nombres">Nombres completos</string>
    <string name="Apellidos">Apellidos completos</string>
    <string name="Dni">DNI</string>
    <string name="Descripcion">Descripcion</string>
    <string name="FechaNacimiento">Fecha de Nacimiento</string>
    <string name="Registrar">Registrar</string>

    <!--Registro de cocineros-->
    <string name="RegistroTXTCocina">Registrar Cocinero</string>

    <!--Registro de meseros-->
    <string name="RegistroTXTMeseros">Registrar Meseros</string>

    <!--Registro de cajeros-->
    <string name="RegistroTXTCajeros">Registrar Cajeros</string>

    <!--Perfil-->
    <string name="PERFILADMINISTRADORTXT">Mi perfil</string>
    <string name="MIINFORMACIONTXT">Mi información</string>
    <string name="DNIPERFILTXT">DNI:</string>
    <string name="DNIPERFIL">--</string>
    <string name="NOMBRESPERFILTXT">Nombres:</string>
    <string name="NOMBRESPERFIL">--</string>
    <string name="APELLIDOSPERFILTXT">Apellidos:</string>
    <string name="APELLIDOSPERFIL">--</string>
    <string name="CORREOPERFILTXT">Correo:</string>
    <string name="CORREOPERFIL">--</string>
    <string name="PASSWORDPERFILTXT">Password:</string>
    <string name="PASSWORDPERFIL">--</string>
    <string name="FECHANACIMINETOPERFILTXT">Fecha de nacimiento:</string>
    <string name="FECHANACIMINETOPERFIL">--</string>
    <string name="AREAPERFILTXT">Area:</string>
    <string name="AREAPERFIL">--</string>
    <string name="DESCRIPCIONPERFILTXT">Descripcion:</string>
    <string name="DESCRIPCIONPERFIL">--</string>
    <string name="ACTUALIZARPASS">Actualizar password</string>
    <string name="ACTUALIZARDATOS">Actualizar Datos</string>

    <!--Item pelicula-->
    <string name="NombreImagenCocina"> -- </string>
    <string name="DescripcionCocina"> -- </string>

    <!--Menu parte superior derecha-->
    <string name="Agregar">Agregar</string>

    <!--Agregar Plato-->
    <string name="IdTXTPlato">ID de mesero</string>
    <string name="IdPlato">Escriba ID aqui</string>
    <string name="NombreTXTPlato">Nombre de plato</string>
    <string name="NombrePlato">Escriba nombre aqui</string>
    <string name="CantidadTXTPlato">Cantidad de plato</string>
    <string name="CantidadPlato">Escriba cantidad aqui</string>
    <string name="PrecioTXTPlato">Precio de plato</string>
    <string name="PrecioPlato">Escriba precio aqui</string>
    <string name="DescripcionTXTPlato">Descripcion de plato</string>
    <string name="DescripcionPlato">Escriba descripcion aqui</string>
    <string name="AgregarPlato">Agregar</string>

    <string name="EliminarCocinero">Eliminar</string>

    <!--Menu Cliente-->
    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>

    <string name="MasOpcionestxt">Más opciones</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="Compartir">Compartir</string>

    <!--Pedido-->
    <string name="RegistroPedido">Registro de Pedido</string>
    <string name="CantidadPedido">Cantidad</string>
    <string name="PrecioUnitarioPedido">Precio Unitario</string>
    <string name="PrecioTotalPedido">Precio Total</string>
    <string name="RegistrarPedido">Registrar</string>

    <!--Perfil plato-->
    <string name="perfilPlato">PLATO</string>
    <string name="detallesPlato">Detalles plato</string>
    <string name="idPlato">ID:</string>
    <string name="idPlatotxt">--</string>
    <string name="nombrePlato">Nombre:</string>
    <string name="nombrePlatotxt">--</string>
    <string name="precioPlato">Precio:</string>
    <string name="precioPlatotxt">--</string>
    <string name="cantidadPlato">Cantidad:</string>
    <string name="cantidadPlatotxt">--</string>
    <string name="descripcionPlato">Descripcion:</string>
    <string name="descripcionPlatotxt">--</string>
    <string name="estadoPlato">Estado:</string>
    <string name="estadoPlatotxt">--</string>
    <string name="editarPlato">EDITAR PLATO</string>
    <string name="borrarPlato">BORRAR PLATO</string>

    <!--Perfil usuario-->
    <string name="perfilUsuario">Usuario</string>
    <string name="detallesUsuario">Detalles usuario</string>
    <string name="idUsuario">ID:</string>
    <string name="idUsuariotxt">--</string>
    <string name="correoUsuario">Correo:</string>
    <string name="correoUsuariotxt">--</string>
    <string name="contrasenaUsuario">Contraseña:</string>
    <string name="contrasenaUsuariotxt">--</string>
    <string name="tipoUsuario">Tipo:</string>
    <string name="tipoUsuariotxt">--</string>
    <string name="editarUsuario">EDITAR USUARIO</string>
    <string name="borrarUsuario">BORRAR USUARIO</string>

    <!--Perfil Pedido-->
    <string name="perfilPedido">Pedido</string>
    <string name="detallesPedido">Detalles pedido</string>
    <string name="idPedido">ID:</string>
    <string name="idPedidotxt">--</string>
    <string name="platoPedido">Plato:</string>
    <string name="platoPedidotxt">--</string>
    <string name="cantidadPedido">Cantidad:</string>
    <string name="cantidadPedidotxt">--</string>
    <string name="precioPedido">Precio Plato:</string>
    <string name="precioPedidotxt">--</string>
    <string name="montoTotal">Monto Total:</string>
    <string name="montoTotaltxt">--</string>
    <string name="estadoPedido">Tipo:</string>
    <string name="estadoPedidotxt">--</string>
    <string name="editarPedido">EDITAR PEDIDO</string>
    <string name="cambiarEstado">CAMBIAR ESTADO</string>

    <!--Perfil empleado-->
    <string name="perfilEmpleado">Empleado</string>
    <string name="detallesEmpleado">Detalles empleado</string>
    <string name="idEmpleado">ID:</string>
    <string name="idEmpleadotxt">--</string>
    <string name="nombresEmpleado">Nombres:</string>
    <string name="nombresEmpleadotxt">--</string>
    <string name="apellidoEmpleado">Apellido:</string>
    <string name="apellidoEmpleadotxt">--</string>
    <string name="fechaEmpleado">Fecha:</string>
    <string name="fechaEmpleadotxt">--</string>
    <string name="dniEmpleado">DNI:</string>
    <string name="dniEmpleadotxt">--</string>
    <string name="descripcionEmplead">Descripcion:</string>
    <string name="descripcionEmpleadtxt">--</string>
    <string name="areaEmpleado">Area:</string>
    <string name="areaEmpleadotxt">--</string>
    <string name="usuarioEmpleado">Usuario:</string>
    <string name="usuarioEmpleadotxt">--</string>
    <string name="editarEmpleado">EDITAR EMPLEADO</string>
    <string name="borrarEmpleado">BORRAR EMPLEADO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>