<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@color/ellipse_4_color">

    <item
        android:id="@+id/Opcionestxt"
        android:title="@string/Opcionestxt">

        <menu>
            <item
                android:id="@+id/InicioEmpleado"
                android:title="@string/InicioEmpleado"
                android:icon="@drawable/uno_icon"/>
            <item
                android:id="@+id/PerfilEmpleado"
                android:title="@string/PerfilEmpleado"
                android:icon="@drawable/dos_icon"/>
            <item
                android:id="@+id/SalirEmpleado"
                android:title="@string/SalirEmpleado"
                android:icon="@drawable/cuatro_icon"/>
        </menu>

    </item>

    <item
        android:id="@+id/MasOpcionestxt"
        android:title="@string/MasOpcionestxt">

        <menu>
            <item
                android:id="@+id/AcercaDe"
                android:title="@string/AcercaDe"
                android:icon="@drawable/acerca_de_icon"/>
        </menu>

    </item>

</menu>