<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="@color/ellipse_4_color">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/InicioAdmin"
            android:title="@string/InicioAdmin"
            android:icon="@drawable/baseline_home_24"/>

        <item
            android:id="@+id/PerfilAdmin"
            android:title="@string/PerfilAdmin"
            android:icon="@drawable/baseline_supervised_user_circle_24"/>

        <item
            android:id="@+id/ListarAdmin"
            android:title="@string/Cartilla"
            android:icon="@drawable/baseline_list_alt_24"/>

        <item
            android:id="@+id/Salir"
            android:title="@string/Salir"
            android:icon="@drawable/baseline_exit_to_app_24"/>
    </group>


</menu>